MontPyParser.java
// Generated from MontPy.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MontPyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FLOAT=1, INT=2, DIGIT=3, STRING=4, DEF=5, FLOAT_TYPE=6, INT_TYPE=7, FOR=8, 
		IN=9, RANGE=10, WHILE=11, IF=12, ELIF=13, ELSE=14, SIZE=15, ADD=16, REMOVE=17, 
		AND=18, OR=19, RETURN=20, PRINT=21, INPUT=22, PLUS=23, MINUS=24, MULTIPLY=25, 
		DIVIDE=26, EXPONENT=27, FLOOR_DIVIDE=28, POWER=29, MODULO=30, OPEN_BRACKET=31, 
		CLOSE_BRACKET=32, OPEN_PAREN=33, CLOSE_PAREN=34, EQUALS=35, EQUALITY=36, 
		INEQUALITY=37, GREATER_THAN=38, LESS_THAN=39, GREATER_THAN_OR_EQUAL=40, 
		LESS_THAN_OR_EQUAL=41, COMMA=42, COLON=43, DOT=44, TAB=45, COMMENT=46, 
		WS=47, ID=48, ERROR=49, NOT=50;
	public static final int
		RULE_program = 0, RULE_type = 1, RULE_list_type = 2, RULE_expression = 3, 
		RULE_literal = 4, RULE_list_function_call = 5, RULE_variable_declaration = 6, 
		RULE_function_declaration = 7, RULE_params = 8, RULE_param = 9, RULE_statement_block = 10, 
		RULE_statement = 11, RULE_assignment = 12, RULE_if_statement = 13, RULE_for_statement = 14, 
		RULE_range_expression = 15, RULE_while_statement = 16, RULE_function_call = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "type", "list_type", "expression", "literal", "list_function_call", 
			"variable_declaration", "function_declaration", "params", "param", "statement_block", 
			"statement", "assignment", "if_statement", "for_statement", "range_expression", 
			"while_statement", "function_call"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'def'", "'float'", "'int'", "'for'", "'in'", 
			"'range'", "'while'", "'if'", "'elif'", "'else'", "'size'", "'add'", 
			"'remove'", "'and'", "'or'", "'return'", "'print'", "'input'", "'+'", 
			"'-'", "'*'", "'/'", "'^'", "'//'", "'**'", "'%'", "'['", "']'", "'('", 
			"')'", "'='", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "','", "':'", 
			"'.'", "'\\t'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FLOAT", "INT", "DIGIT", "STRING", "DEF", "FLOAT_TYPE", "INT_TYPE", 
			"FOR", "IN", "RANGE", "WHILE", "IF", "ELIF", "ELSE", "SIZE", "ADD", "REMOVE", 
			"AND", "OR", "RETURN", "PRINT", "INPUT", "PLUS", "MINUS", "MULTIPLY", 
			"DIVIDE", "EXPONENT", "FLOOR_DIVIDE", "POWER", "MODULO", "OPEN_BRACKET", 
			"CLOSE_BRACKET", "OPEN_PAREN", "CLOSE_PAREN", "EQUALS", "EQUALITY", "INEQUALITY", 
			"GREATER_THAN", "LESS_THAN", "GREATER_THAN_OR_EQUAL", "LESS_THAN_OR_EQUAL", 
			"COMMA", "COLON", "DOT", "TAB", "COMMENT", "WS", "ID", "ERROR", "NOT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MontPy.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MontPyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MontPyParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<Function_declarationContext> function_declaration() {
			return getRuleContexts(Function_declarationContext.class);
		}
		public Function_declarationContext function_declaration(int i) {
			return getRuleContext(Function_declarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MontPyListener ) ((MontPyListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MontPyListener ) ((MontPyListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(38);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case FLOAT:
				case INT:
				case STRING:
				case FLOAT_TYPE:
				case INT_TYPE:
				case FOR:
				case WHILE:
				case IF:
				case SIZE:
				case ADD:
				case REMOVE:
				case RETURN:
				case PRINT:
				case INPUT:
				case OPEN_PAREN:
				case ID:
				case NOT:
					{
					setState(36);
					statement();
					}
					break;
				case DEF:
					{
					setState(37);
					function_declaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(40); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1407383481063926L) != 0) );
			setState(42);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public TerminalNode INT_TYPE() { return getToken(MontPyParser.INT_TYPE, 0); }
		public TerminalNode FLOAT_TYPE() { return getToken(MontPyParser.FLOAT_TYPE, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MontPyListener ) ((MontPyListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MontPyListener ) ((MontPyListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			_la = _input.LA(1);
			if ( !(_la==FLOAT_TYPE || _la==INT_TYPE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class List_typeContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode OPEN_BRACKET() { return getToken(MontPyParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(MontPyParser.CLOSE_BRACKET, 0); }
		public List_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MontPyListener ) ((MontPyListener)listener).enterList_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MontPyListener ) ((MontPyListener)listener).exitList_type(this);
		}
	}

	public final List_typeContext list_type() throws RecognitionException {
		List_typeContext _localctx = new List_typeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_list_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			type();
			setState(47);
			match(OPEN_BRACKET);
			setState(48);
			match(CLOSE_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public TerminalNode ID() { return getToken(MontPyParser.ID, 0); }
		public TerminalNode OPEN_PAREN() { return getToken(MontPyParser.OPEN_PAREN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode CLOSE_PAREN() { return getToken(MontPyParser.CLOSE_PAREN, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(MontPyParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(MontPyParser.CLOSE_BRACKET, 0); }
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public List_function_callContext list_function_call() {
			return getRuleContext(List_function_callContext.class,0);
		}
		public TerminalNode NOT() { return getToken(MontPyParser.NOT, 0); }
		public TerminalNode PLUS() { return getToken(MontPyParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(MontPyParser.MINUS, 0); }
		public TerminalNode MULTIPLY() { return getToken(MontPyParser.MULTIPLY, 0); }
		public TerminalNode DIVIDE() { return getToken(MontPyParser.DIVIDE, 0); }
		public TerminalNode EXPONENT() { return getToken(MontPyParser.EXPONENT, 0); }
		public TerminalNode FLOOR_DIVIDE() { return getToken(MontPyParser.FLOOR_DIVIDE, 0); }
		public TerminalNode MODULO() { return getToken(MontPyParser.MODULO, 0); }
		public TerminalNode EQUALITY() { return getToken(MontPyParser.EQUALITY, 0); }
		public TerminalNode INEQUALITY() { return getToken(MontPyParser.INEQUALITY, 0); }
		public TerminalNode GREATER_THAN() { return getToken(MontPyParser.GREATER_THAN, 0); }
		public TerminalNode LESS_THAN() { return getToken(MontPyParser.LESS_THAN, 0); }
		public TerminalNode GREATER_THAN_OR_EQUAL() { return getToken(MontPyParser.GREATER_THAN_OR_EQUAL, 0); }
		public TerminalNode LESS_THAN_OR_EQUAL() { return getToken(MontPyParser.LESS_THAN_OR_EQUAL, 0); }
		public TerminalNode AND() { return getToken(MontPyParser.AND, 0); }
		public TerminalNode OR() { return getToken(MontPyParser.OR, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MontPyListener ) ((MontPyListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MontPyListener ) ((MontPyListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(51);
				literal();
				}
				break;
			case 2:
				{
				setState(52);
				match(ID);
				}
				break;
			case 3:
				{
				setState(53);
				match(OPEN_PAREN);
				setState(54);
				expression(0);
				setState(55);
				match(CLOSE_PAREN);
				}
				break;
			case 4:
				{
				setState(57);
				match(ID);
				setState(58);
				match(OPEN_BRACKET);
				setState(59);
				expression(0);
				setState(60);
				match(CLOSE_BRACKET);
				}
				break;
			case 5:
				{
				setState(62);
				function_call();
				}
				break;
			case 6:
				{
				setState(63);
				list_function_call();
				}
				break;
			case 7:
				{
				setState(64);
				match(NOT);
				setState(65);
				expression(1);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(82);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(80);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(68);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(69);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1602224128L) != 0)) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(70);
						expression(10);
						}
						break;
					case 2:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(71);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(72);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 4329327034368L) != 0)) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(73);
						expression(5);
						}
						break;
					case 3:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(74);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(75);
						match(AND);
						setState(76);
						expression(4);
						}
						break;
					case 4:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(77);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(78);
						match(OR);
						setState(79);
						expression(3);
						}
						break;
					}
					} 
				}
				setState(84);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(MontPyParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(MontPyParser.FLOAT, 0); }
		public TerminalNode STRING() { return getToken(MontPyParser.STRING, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MontPyListener ) ((MontPyListener)listener).enterLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MontPyListener ) ((MontPyListener)listener).exitLiteral(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 22L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class List_function_callContext extends ParserRuleContext {
		public TerminalNode OPEN_PAREN() { return getToken(MontPyParser.OPEN_PAREN, 0); }
		public TerminalNode ID() { return getToken(MontPyParser.ID, 0); }
		public TerminalNode CLOSE_PAREN() { return getToken(MontPyParser.CLOSE_PAREN, 0); }
		public TerminalNode SIZE() { return getToken(MontPyParser.SIZE, 0); }
		public TerminalNode ADD() { return getToken(MontPyParser.ADD, 0); }
		public TerminalNode REMOVE() { return getToken(MontPyParser.REMOVE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(MontPyParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MontPyParser.COMMA, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List_function_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_function_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MontPyListener ) ((MontPyListener)listener).enterList_function_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MontPyListener ) ((MontPyListener)listener).exitList_function_call(this);
		}
	}

	public final List_function_callContext list_function_call() throws RecognitionException {
		List_function_callContext _localctx = new List_function_callContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_list_function_call);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 229376L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(88);
			match(OPEN_PAREN);
			setState(89);
			match(ID);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(90);
				match(COMMA);
				setState(91);
				expression(0);
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97);
			match(CLOSE_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Variable_declarationContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(MontPyParser.ID, 0); }
		public TerminalNode EQUALS() { return getToken(MontPyParser.EQUALS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List_typeContext list_type() {
			return getRuleContext(List_typeContext.class,0);
		}
		public TerminalNode OPEN_BRACKET() { return getToken(MontPyParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(MontPyParser.CLOSE_BRACKET, 0); }
		public List<LiteralContext> literal() {
			return getRuleContexts(LiteralContext.class);
		}
		public LiteralContext literal(int i) {
			return getRuleContext(LiteralContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MontPyParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MontPyParser.COMMA, i);
		}
		public Variable_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MontPyListener ) ((MontPyListener)listener).enterVariable_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MontPyListener ) ((MontPyListener)listener).exitVariable_declaration(this);
		}
	}

	public final Variable_declarationContext variable_declaration() throws RecognitionException {
		Variable_declarationContext _localctx = new Variable_declarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variable_declaration);
		int _la;
		try {
			setState(125);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				type();
				setState(100);
				match(ID);
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EQUALS) {
					{
					setState(101);
					match(EQUALS);
					setState(102);
					expression(0);
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				list_type();
				setState(106);
				match(ID);
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EQUALS) {
					{
					setState(107);
					match(EQUALS);
					setState(108);
					match(OPEN_BRACKET);
					setState(117);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 22L) != 0)) {
						{
						setState(109);
						literal();
						setState(114);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==COMMA) {
							{
							{
							setState(110);
							match(COMMA);
							setState(111);
							literal();
							}
							}
							setState(116);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						}
					}

					setState(119);
					match(CLOSE_BRACKET);
					}
				}

				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(122);
				match(ID);
				setState(123);
				match(EQUALS);
				setState(124);
				expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Function_declarationContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(MontPyParser.DEF, 0); }
		public TerminalNode ID() { return getToken(MontPyParser.ID, 0); }
		public TerminalNode OPEN_PAREN() { return getToken(MontPyParser.OPEN_PAREN, 0); }
		public TerminalNode CLOSE_PAREN() { return getToken(MontPyParser.CLOSE_PAREN, 0); }
		public Statement_blockContext statement_block() {
			return getRuleContext(Statement_blockContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public Function_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MontPyListener ) ((MontPyListener)listener).enterFunction_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MontPyListener ) ((MontPyListener)listener).exitFunction_declaration(this);
		}
	}
